base/passive-income/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: passive-income
  labels:
    name: passive-income
