base/passive-income/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passive-income
  namespace: passive-income
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.io/ingress-backend: traefik.io/v1alpha1
spec:
  ingressClassName: traefik
  rules:
  - host: passive-income.oostrandpark.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passive-income
            port:
              number: 80
  tls:
  - hosts:
    - passive-income.oostrandpark.com
    secretName: passive-income-tls
